--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URL=mongodb+srv://root:yajaman@cluster0.pmit6.mongodb.net/bracketsDB?retryWrites=true&w=majority
+SECRET_KEY =HeKhPkRnUrWtZw3yeKhPkRpUrWtZw3y55A7C9FcHeMhPkRpU
