class, assignment, and compile services added

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URL=mongodb+srv://root:yajaman@cluster0.pmit6.mongodb.net/bracketsDB?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://yajaman:yajamankr@cluster0.8z3qf.mongodb.net/bracketsDB?retryWrites=true&w=majority
 SECRET_KEY =HeKhPkRnUrWtZw3yeKhPkRpUrWtZw3y55A7C9FcHeMhPkRpU
+COMPILE_API=http://localhost:8080/compile
