--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "got": "^11.8.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "socket.io": "^4.0.1",
+    "uuid": "^8.3.2"
   }
 }
