--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@ MONGO_URL=mongodb+srv://yajaman:yajamankr@cluster0.8z3qf.mongodb.net/bracketsDB?
 SECRET_KEY =HeKhPkRnUrWtZw3yeKhPkRpUrWtZw3y55A7C9FcHeMhPkRpU
 COMPILE_API=http://localhost:8080/compile
 HOST=mail.privateemail.com
-EMAIL =brackets@bharadwajkr.me
-PASSWORD =brackets1234
+//EMAIL =brackets@bharadwajkr.me
+//PASSWORD =brackets1234
+EMAIL=yajamankr@gmail.com
+PASSWORD=imyajamankr07
